* Bug: removed CSP compliance in js/lumiere_scripts.js and js/highslide-options.js as it prevented a correct running of the highslide popups -> highslide should close windows under CSP
* Bug: Removed adding automatically image in tinyMCE, I can't get rid of it when posting (imdbImg in lumiere_admin_tinymce_editor.js)

v3.0.1
* Gutenberg Block: better layout, implemented selection of either [imdblt] or [imdbltid]
* Gutenberg Block: created a new page gutenberg-search.php for searching movies from gutenberg
* Translation: renamed all calls in __() and the likes from 'imdb' to 'lumiere-movies', changed the language system according to the (new) Wordpress language system
* Explaination:  "Toolbar Lumière admin menu" and "Menu for Lumière options" where a mess in terms of explanation. Rewrote.
* Taxonomy standard template file was missing translation options
* Renamed the widget's name for the wordpress widget page
* Converted onclick=\"return hs.close(this)\" from highslide-options.js into a jQuery function
* Bug: Issues of mobile responsiveness in options-cache.php
* Bug: highslide popup unactive by default. "imdbpopup_highslide" set on true in config
* Bug: banner wrong name
* Bug: The new name for the widget hook register wasn't updated in config.php (the check failed in Lumière options)
* Bug: chmod'ing process upon plugin activation wasn't taking in consideration if a cache folder already exists
* Bug: loooongstanding bug for taxonomy links in imdb-movie.inc.php, rewrote how taxonomy links are called, created a function
* Bug: update taxonomy activation/deactivation didn't refresh rewrite rules, refresh of taxonomy should now make the taxonomy links

v3.0
* [major] updated to imdbphp-6.5 library
* [major] rewritten the code to be compliant with wordpress security
* [major] plugin is compatible with tablets/mobile phones (fully responsive)
* [major] first block for Gutenberg (for [imdblt] movies included by name)