@@ -6,6 +6,7 @@ v3.1
 * Bug: the lumiere's scripts weren't loaded outside the Lumiere's dedicated pages. Removed checks in lumiere_add_footer_blog()'s lumiere-movies.php, deactivated calls to head and footer construction for imbd-movies.inc.php in lumiere-movies.php and widget (head and footer are already loaded!)
 * Bug: removed CSP compliance in js/lumiere_scripts.js and js/highslide-options.js as it prevented a correct running of the highslide popups -> highslide should close windows under CSP
 * Bug: Removed adding automatically image in tinyMCE, I can't get rid of it when posting (imdbImg in lumiere_admin_tinymce_editor.js)
+* Bug: uninstall wasn't removing taxonomy terms. Simplified the function and it's now working.
 
 v3.0.1
 * Gutenberg Block: better layout, implemented selection of either [imdblt] or [imdbltid]
